{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Movement",
            "id": "4af41d1b-6434-4433-93af-208880f93618",
            "actions": [
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "b0c8cf23-9f48-47cc-9088-d05ec02da7e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SideMove",
                    "type": "PassThrough",
                    "id": "2ed5d132-17d2-4bdf-a991-2151850476df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b873bb0a-6c41-4c57-86ee-5fdad30ff474",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "5f275541-0d33-43f4-85fc-e1e7ec588a0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "14bb98b7-8b04-4cd9-af4e-00ed0720d834",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "504e6c19-b998-4b42-b843-b86f3baf4f96",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28f566c0-ad1b-4f76-9a28-8f18da1d9a94",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "c7616697-e641-4a39-8543-03e6f511176b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0ae852ec-e670-44ac-81f2-0b6a9caf1572",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "714f828c-5268-4658-942e-6abd69f44cde",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "66a4cfa5-6b6b-4b72-9003-7f43f1a945e0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "cf4bb83f-685c-4e42-97f6-10956db4ac45",
            "actions": [
                {
                    "name": "Basic Attack",
                    "type": "Button",
                    "id": "39fff28e-26ea-448f-8529-9af96d82c451",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e217601f-98dd-477b-ab44-e264ef5e4e4b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Basic Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}